--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 
-    <h1>Gallery made with nanogallery2</h1>
+    <h1>The Uniduck Gallery</h1>
 
     <div ID="uniduck" data-nanogallery2='{
         "flickrAPIKey": "4e86bc0b6ffe30f04d7397379f616f37",
@@ -22,9 +22,9 @@
           "position": "overImageOnBottom",
           "display": false
         },
-        "thumbnailHoverEffect2": "scale120",
+        "thumbnailHoverEffect2": "scale120|borderDarker",
         "thumbnailAlignment": "center",
-        "thumbnailOpenImage": true
+        "thumbnailOpenImage": false
       }'>
 
     </div>
