--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 
-    <h1>The Uniduck Gallery</h1>
+    <h1 style="text-align:center">The Uniduck Gallery</h1>
 
     <div ID="uniduck" data-nanogallery2='{
         "flickrAPIKey": "4e86bc0b6ffe30f04d7397379f616f37",
